--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Timetable</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!--<script src="./student-group.js" type="module"></script>-->
+    <script src="./student-group.js" type="module"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght{400;500;600;700}&display=swap" rel="stylesheet">
     <style>
         body {
@@ -771,3 +771,4 @@
     </script>
 </body>
 </html>
+
