--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
     <script type="module">
         import { idMapCSVContent } from './student-group.js';
+        import { timetableCSVContent } from './student-group.js';
 
         document.addEventListener('DOMContentLoaded', () => {
             const studentIdInput = document.getElementById('student-id-input');
@@ -448,234 +449,11 @@
             // --- MAIN LOGIC ---
 
             // CSV Content for Student ID to Course Group mapping (Groups for TT yr1.csv)
-//             const idMapCSVContent = `id,name,course
-// 20368757,"Afzal, Miss Sabah ",S118ED-Y1-G1
-// 20378618,"Khan, Miss Zulaykha Noor",S118ED-Y1-G1
-// 20377797,"Muhammad, Mr Talha Khan",S118ED-Y1-G1
-// 20381185,"Nawaz, Mr Qasim Qasim",S118ED-Y1-G1
-// 20380736,"Razaq, Mr Muneeb Ashfaq",S118ED-Y1-G1
-// 20378471,"Saju, Mr Simon ",S118ED-Y1-G1
-// 20379858,"Solkar, Mr Yousuf Ibrahim",S118ED-Y1-G1
-// 20385511,"Willis, Mr Wade King",S118ED-Y1-G1
-// 20380791,"Dar, Mr Aaryan Aaryan",S118ED-Y1-G1
-// 20379159,"Farag, Mr Ahmed Abdelrahman",S118ED-Y1-G1
-// 20374891,"Hickson, Mx Aidan ",S118ED-Y1-G1
-// 20380117,"Hussain, Mr Mohammed-Murtaza ",S118ED-Y1-G1
-// 20379909,"Ali Kanwal, Miss Sheeza ",S118ED-Y1-G1
-// 20381824,"Adams, Miss Charlotte Elizabeth",S118ED-Y1-G1
-// 20378862,"Munshi, Fayaz",S118ED-Y1-G1
-// 20379560,"Kouser, Mr Ali Mehmood",S118ED-Y1-G1
-// 20364571,"Khansia, Mr Layth Ahmed",S118ED-Y1-G1
-// 20379937,"Akhtar, Mr Aayan Kaser",S118ED-Y1-G1
-// 20360670,"Iqbal, Miss Shabana Kiran",S118ED-Y1-G2
-// 20379362,"Choudhry, Waniya ",S118ED-Y1-G2
-// 20368611,"Aslam, Mr Zidhaan ",S118ED-Y1-G2
-// 20381228,"Butt, Mr Sami ",S118ED-Y1-G2
-// 20378014,"Ghisa, Miss Aiman ",S118ED-Y1-G2
-// 20359335,"Hesketh, Miss Leona Nicole",S118ED-Y1-G2
-// 20377761,"Ibrahim, Mr Zain ",S118ED-Y1-G2
-// 20381477,"John, Miss Wisdom Amarachukwu",S118ED-Y1-G2
-// 20382471,"Oluwasegun, Miss Divine ",S118ED-Y1-G2
-// 20379157,"Patel, Miss Humayra ",S118ED-Y1-G2
-// 20384638,"Patel, Mr Hamza ",S118ED-Y1-G2
-// 20380340,"Shaheen, Miss Tayba ",S118ED-Y1-G2
-// 20379456,"Tai, Mr Uzair ",S118ED-Y1-G2
-// 20378753,Aiysha Kousar,S118ED-Y1-G2
-// 20378464,Bibi,S118ED-Y1-G2
-// 20378430,Bibi,S118ED-Y1-G2
-// 20380322,"Adam, Mr Humzah ",S118ED-Y1-G3
-// 20379316,"Al-Doseri, Miss Saja Al'issa",S118ED-Y1-G3
-// 20370815,"Alli, Miss Husnaa Sajid",S118ED-Y1-G3
-// 20379395,"Hassan, Miss Safah ",S118ED-Y1-G3
-// 20386204,"Iftikhar, Mr Ahsan ",S118ED-Y1-G3
-// 20360019,"Ilunga, Mr Daniel Kabanga",S118ED-Y1-G3
-// 20380864,"Ilyas, Miss Humairah ",S118ED-Y1-G3
-// 20378778,"Khan, Miss Maryam ",S118ED-Y1-G3
-// 20381032,"Malik, Miss Imaan Jan",S118ED-Y1-G3
-// 20385563,"Malik, Mr Faizaan ",S118ED-Y1-G3
-// 20378501,"Mohammed, Miss Maariah ",S118ED-Y1-G3
-// 20379445,"Shah, Miss Fiza Haroon",S118ED-Y1-G3
-// 20381125,"Vachhiyat, Mr Muhammad ",S118ED-Y1-G3
-// 20384188,"Hussain, Fatima",S118ED-Y1-G3
-// 20385488,"Hussain, Maryam",S118ED-Y1-G3
-// 20371539,"Hussain, Ms Sana ",S118ED-Y1-G3
-// 20378656,"Iqbal, Miss Sara ",S118ED-Y1-G3
-// 20374614,"Rahman, Mr Shaafi ",S118ED-Y1-G3
-// 20378911,"Begum, Miss Meena ",S118ED-Y1-G4
-// 20378686,"Jamil, Miss Alishba ",S118ED-Y1-G4
-// 20368896,"Adam, Miss Munira ",S118ED-Y1-G4
-// 20380214,"Ahmed, Miss Anam Kausar",S118ED-Y1-G4
-// 20369179,"Alsaedi, Miss Teeba Mohammad",S118ED-Y1-G4
-// 20366523,"Bhatti, Miss Halimah Kibriyah",S118ED-Y1-G4
-// 20385556,"Chaudhry, Miss Zara ",S118ED-Y1-G4
-// 20377644,"Fulat, Miss Tayyabah ",S118ED-Y1-G4
-// 20369369,"Iqbal, Miss Nayab ",S118ED-Y1-G4
-// 20369331,"Moazam, Miss Hifsa ",S118ED-Y1-G4
-// 20381551,"Nguyen, Miss Maryam ",S118ED-Y1-G4
-// 20378173,"Riaz, Miss Laiba Afzal",S118ED-Y1-G4
-// 20380266,"Saddat, Miss Perka ",S118ED-Y1-G4
-// 20378705,"Yousaf, Mr Muhammad Abdullah",S118ED-Y1-G4
-// 20357562,Khan,S118ED-Y1-G4
-// 20379896,"Sardar, Mr Issa ",S118ED-Y1-G4
-// 20380681,"Khan, Mr Mohammed Sultan",S118ED-Y1-G4
-// 20385637,"Ahmed, Mr Hamza ",S118ED-Y1-G4
-// 20384550,"Chaudhry, Mr Owais Owais Shahzad",S118ED-Y1-G5
-// 20381707,"Hamza, Mr Ali ",S118ED-Y1-G5
-// 20381018,"Akhtar, Mr Ali-Raza ",S118ED-Y1-G5
-// 20380744,"Ali, Miss Haleema ",S118ED-Y1-G5
-// 20380154,"Balesaria, Mr Sahl ",S118ED-Y1-G5
-// 20372340,"Freeman, Miss Sophie Riayah",S118ED-Y1-G5
-// 20370037,"Imtiaz, Miss Rubab ",S118ED-Y1-G5
-// 20378499,"Lambat, Miss Aamina Hassan",S118ED-Y1-G5
-// 20379819,"Malagocki, Mr Igor ",S118ED-Y1-G5
-// 20377975,"Malik, Miss Safira ",S118ED-Y1-G5
-// 20376017,"Ravat, Mr Sufyaan ",S118ED-Y1-G5
-// 20385481,"Rizwan, Miss Aneesa ",S118ED-Y1-G5
-// 20382978,"Sheikh, Miss Hajira ",S118ED-Y1-G5
-// 20370790,"Shoby, Miss Helen Angel ",S118ED-Y1-G5
-// 20380391,"Singh, Mr Jay Jay",S118ED-Y1-G5
-// 20378491,"Syed, Miss Javeriya Fatima",S118ED-Y1-G5
-// 20380684,"West-Qasam, Miss Hanna Bridget",S118ED-Y1-G5
-// 20379059,"Patel, Mr Ayaan ",S118ED-Y1-G6
-// 20381782,"Rehman, Mr Qasim ",S118ED-Y1-G6
-// 20378360,"Ahmed, Miss Aqsa ",S118ED-Y1-G6
-// 20381544,"Alennezi, Miss Fatima ",S118ED-Y1-G6
-// 20359110,"Azram, Miss Komal ",S118ED-Y1-G6
-// 20369772,"Badat, Mr Muhammad ",S118ED-Y1-G6
-// 20368395,"Begum, Miss Mariya ",S118ED-Y1-G6
-// 20385443,"Beha, Mr Abdel Rahman ",S118ED-Y1-G6
-// 20382278,"Billington, Mr Liam Jean",S118ED-Y1-G6
-// 20384712,"Iqbal, Mr Hamza Muhammad",S118ED-Y1-G6
-// 20365988,"Patel, Miss Raeesah Juned",S118ED-Y1-G6
-// 20385329,"Smith, Miss Hayden ",S118ED-Y1-G6
-// 20370847,"Suleman, Mr Mohammed Bilal",S118ED-Y1-G6
-// 20378500,"Ugradar, Miss Fatima ",S118ED-Y1-G6
-// 20378607,"Yasif, Miss Ameera ",S118ED-Y1-G6
-// 20378447,"Majeed, Miss Juwariyah ",S118ED-Y1-G6
-// 20347528,"Patel, Mr Mohammed Zain ",S118ED-Y1-G6
-// 20369989,"Bhatti, Mr Mubarak Asad Ali",S118ED-Y1-G6
-// `;
+
             idToCourseMap = processIdMapCSV(idMapCSVContent);
 
             // CSV Content for the Timetable Data
-            const timetableCSVContent = `"course","unit","day","time","length","lecturer","room"
-"S104-G1","U4","2","9:00 - 10:30","1.5","Batoul","SP215"
-"S104-G1","TUT","2","11:00 - 12:00","1","Batoul","SP109"
-"S104-G1","U19","2","1:00 - 2:30","1.5","Batoul","SP312"
-"S104-G1","U12","4","1:15 - 2:45","1.5","Batoul","SP311"
-"S104-G1","English","3","9:00 - 10:30","1.5","None","TBA"
-"S104-G1","Maths","3","10:45 - 12:15","1.5","None","TBA"
-"S104-G1","U1","3","1:15 - 2:45","1.5","Batoul","SP312"
-"S104-G1","English","4","9:00 - 10:30","1.5","None","TBA"
-"S104-G1","Maths","4","10:45 - 12:15","1.5","None","TBA"
-"S104-G1","U3","5","1:15 - 2:45","1.5","Sam","SP215"
-"S104-G1","TUT","5","10:00 - 11:00","1","Sam","SP109"
-"S118ED-Y1-G1","U2/4","1","9:00 - 10:30","1.5","Dalia","SP307"
-"S118ED-Y1-G1","U3B/10","1","11:00 - 12:30","1.5","Mubasshira","SP308"
-"S118ED-Y1-G1","U3P/4","1","1:45 - 3:15","1.5","Sam","SP310"
-"S118ED-Y1-G1","U1B/9","3","10:00 - 11:00","1","Sadik","SP312"
-"S118ED-Y1-G1","U2/4","2","9:00 - 10:00","1","Amran","SP311"
-"S118ED-Y1-G1","U1P/4","2","2:15 - 3:15","1","Saimah","SP309"
-"S118ED-Y1-G1","U1C/14","2","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G1","U1P/4","3","11:15 - 12:15","1","Saimah","SP312"
-"S118ED-Y1-G1","U2/4","3","1:00 - 2:00","1","Amran","SP310"
-"S118ED-Y1-G1","U1B/9","2","2:45 - 3:45","1","Sadik","SP312"
-"S118ED-Y1-G1","U1C/14","4","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G1","U2C/3","5","10:00 - 11:00","1","Mubasshira","SP308"
-"S118ED-Y1-G1","U2P/4","5","11:00 - 12:00","1","Batoul","SP307"
-"S118ED-Y1-G5","U2/4","1","9:00 - 10:30","1.5","Dalia","SP307"
-"S118ED-Y1-G5","U3B/10","1","11:00 - 12:30","1.5","Mubasshira","SP308"
-"S118ED-Y1-G5","U3P/4","1","1:45 - 3:15","1.5","Sam","SP310"
-"S118ED-Y1-G5","U1B/9","3","10:00 - 11:00","1","Sadik","SP312"
-"S118ED-Y1-G5","U2/4","2","9:00 - 10:00","1","Amran","SP311"
-"S118ED-Y1-G5","TUT","2","11:00 - 12:00","1","Dalia","SP310"
-"S118ED-Y1-G5","U1P/4","2","2:15 - 3:15","1","Saimah","SP309"
-"S118ED-Y1-G5","U1C/14","2","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G5","U1P/4","3","11:15 - 12:15","1","Saimah","SP312"
-"S118ED-Y1-G5","U2/4","3","1:00 - 2:00","1","Amran","SP310"
-"S118ED-Y1-G5","U1B/9","4","11:00 - 12:00","1","Sadik","SP311"
-"S118ED-Y1-G5","U1C/14","4","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G5","U2C/3","5","10:00 - 11:00","1","Mubasshira","SP308"
-"S118ED-Y1-G5","U2P/4","5","11:00 - 12:00","1","Batoul","SP307"
-"S118ED-Y1-G5","U1/4","5","2:00 - 3:00","1","Dalia","SP310"
-"S118ED-Y1-G2","U2/4","1","9:00 - 10:30","1.5","Dalia","SP307"
-"S118ED-Y1-G2","U3B/10","1","11:00 - 12:30","1.5","Mubasshira","SP308"
-"S118ED-Y1-G2","U3P/4","1","1:45 - 3:15","1.5","Sam","SP310"
-"S118ED-Y1-G2","U1B/9","3","10:00 - 11:00","1","Sadik","SP312"
-"S118ED-Y1-G2","U2/4","2","9:00 - 10:00","1","Amran","SP311"
-"S118ED-Y1-G2","TUT","2","11:00 - 12:00","1","Dalia","SP310"
-"S118ED-Y1-G2","U1P/4","2","2:15 - 3:15","1","Saimah","SP309"
-"S118ED-Y1-G2","U1C/14","2","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G2","U1P/4","3","11:15 - 12:15","1","Saimah","SP312"
-"S118ED-Y1-G2","U2/4","3","1:00 - 2:00","1","Amran","SP310"
-"S118ED-Y1-G2","U1B/9","4","11:00 - 12:00","1","Sadik","SP311"
-"S118ED-Y1-G2","U1C/14","4","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G2","U2C/3","5","10:00 - 11:00","1","Mubasshira","SP308"
-"S118ED-Y1-G2","U2P/4","5","11:00 - 12:00","1","Batoul","SP307"
-"S118ED-Y1-G2","U1/4","5","2:00 - 3:00","1","Dalia","SP310"
-"S118ED-Y1-G4","U2/4","1","9:00 - 10:30","1.5","Dalia","SP307"
-"S118ED-Y1-G4","U3B/10","1","11:00 - 12:30","1.5","Mubasshira","SP308"
-"S118ED-Y1-G4","U3P/4","1","1:45 - 3:15","1.5","Sam","SP310"
-"S118ED-Y1-G4","U1B/9","3","10:00 - 11:00","1","Sadik","SP312"
-"S118ED-Y1-G4","U2/4","2","9:00 - 10:00","1","Amran","SP311"
-"S118ED-Y1-G4","TUT","2","11:00 - 12:00","1","Dalia","SP310"
-"S118ED-Y1-G4","U1P/4","2","2:15 - 3:15","1","Saimah","SP309"
-"S118ED-Y1-G4","U1C/14","2","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G4","U1P/4","3","11:15 - 12:15","1","Saimah","SP312"
-"S118ED-Y1-G4","U2/4","3","1:00 - 2:00","1","Amran","SP310"
-"S118ED-Y1-G4","U1B/9","4","11:00 - 12:00","1","Sadik","SP311"
-"S118ED-Y1-G4","U1C/14","4","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G4","U2C/3","5","10:00 - 11:00","1","Mubasshira","SP308"
-"S118ED-Y1-G4","U2P/4","5","11:00 - 12:00","1","Batoul","SP307"
-"S118ED-Y1-G4","U1/4","5","2:00 - 3:00","1","Dalia","SP310"
-"S118ED-Y1-G3","U2/4","1","9:00 - 10:30","1.5","Dalia","SP307"
-"S118ED-Y1-G3","U3B/10","1","11:00 - 12:30","1.5","Mubasshira","SP308"
-"S118ED-Y1-G3","U3P/4","1","1:45 - 3:15","1.5","Sam","SP310"
-"S118ED-Y1-G3","U1B/9","3","10:00 - 11:00","1","Sadik","SP312"
-"S118ED-Y1-G3","U2/4","2","9:00 - 10:00","1","Amran","SP311"
-"S118ED-Y1-G3","TUT","2","11:00 - 12:00","1","Dalia","SP310"
-"S118ED-Y1-G3","U1P/4","2","2:15 - 3:15","1","Saimah","SP309"
-"S118ED-Y1-G3","U1C/14","2","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G3","U1P/4","3","11:15 - 12:15","1","Saimah","SP312"
-"S118ED-Y1-G3","U2/4","3","1:00 - 2:00","1","Amran","SP310"
-"S118ED-Y1-G3","U1B/9","4","11:00 - 12:00","1","Sadik","SP311"
-"S118ED-Y1-G3","U1C/14","4","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G3","U2C/3","5","10:00 - 11:00","1","Mubasshira","SP308"
-"S118ED-Y1-G3","U2P/4","5","11:00 - 12:00","1","Batoul","SP307"
-"S118ED-Y1-G3","U1/4","5","2:00 - 3:00","1","Dalia","SP310"
-"S118ED-Y1-G6","U2/4","1","9:00 - 10:30","1.5","Dalia","SP307"
-"S118ED-Y1-G6","U3B/10","1","11:00 - 12:30","1.5","Mubasshira","SP308"
-"S118ED-Y1-G6","U3P/4","1","1:45 - 3:15","1.5","Sam","SP310"
-"S118ED-Y1-G6","U1B/9","3","10:00 - 11:00","1","Sadik","SP312"
-"S118ED-Y1-G6","U2/4","2","9:00 - 10:00","1","Amran","SP311"
-"S118ED-Y1-G6","TUT","2","11:00 - 12:00","1","Dalia","SP310"
-"S118ED-Y1-G6","U1P/4","2","2:15 - 3:15","1","Saimah","SP309"
-"S118ED-Y1-G6","U1C/14","2","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G6","U1P/4","3","11:15 - 12:15","1","Saimah","SP312"
-"S118ED-Y1-G6","U2/4","3","1:00 - 2:00","1","Amran","SP310"
-"S118ED-Y1-G6","U1B/9","4","11:00 - 12:00","1","Sadik","SP311"
-"S118ED-Y1-G6","U1C/14","4","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y1-G6","U2C/3","5","10:00 - 11:00","1","Mubasshira","SP308"
-"S118ED-Y1-G6","U2P/4","5","11:00 - 12:00","1","Batoul","SP307"
-"S118ED-Y1-G6","U1/4","5","2:00 - 3:00","1","Dalia","SP310"
-"S118ED-Y2-G1","U1","1","9:00 - 10:30","1.5","Batoul","SP312"
-"S118ED-Y2-G1","U1","3","1:00 - 2:30","1.5","Batoul","SP312"
-"S118ED-Y2-G1","U1","4","10:00 - 11:00","1","Batoul","SP312"
-"S118ED-Y2-G1","U2","1","10:45 - 12:15","1.5","Sadik","SP311"
-"S118ED-Y2-G1","U2","2","11:00 - 12:00","1","Sadik","SP311"
-"S118ED-Y2-G1","U2","4","11:00 - 12:00","1","Sadik","SP311"
-"S118ED-Y2-G1","U3","1","2:00 - 3:00","1","Alex","SP309"
-"S118ED-Y2-G1","U3","3","9:00 - 10:00","1","Alex","SP309"
-"S118ED-Y2-G1","U3","4","1:00 - 2:00","1","Alex","SP309"
-"S118ED-Y2-G1","U4","2","1:00 - 2:00","1","Saimah","SP309"
-"S118ED-Y2-G1","U4","3","11:15 - 12:15","1","Saimah","SP309"
-"S118ED-Y2-G1","U4","5","10:00 - 11:00","1","Saimah","SP309"
-"S118ED-Y2-G1","U5","3","2:15 - 3:15","1","Mubasshira","SP308"
-"S118ED-Y2-G1","U5","5","11:00 - 12:00","1","Mubasshira","SP308"
-"S118ED-Y2-G1","U6","2","9:00 - 10:00","1","Amran","SP310"
-"S118ED-Y2-G1","U6","4","9:00 - 10:00","1","Amran","SP310"
-"S118ED-Y2-G1","U6","5","2:00 - 3:00","1","Amran","SP310"
-`;
+
             processTimetableCSV(timetableCSVContent);
 
             function showMessage(text, isError = true) {
@@ -771,4 +549,5 @@
     </script>
 </body>
 </html>
+
 
