--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 dataRows.forEach(rowString => {
                     // Split the row by comma. This is simple and reliable for getting the first and last column,
                     // even if quoted fields with internal commas break the middle columns.
-                    const cells = rowString.split(','); 
+                    const cells = rowString.split(' '); 
                     
                     if (cells.length > 1) {
                         // Extract the first cell (ID) and the last cell (Course)
@@ -549,5 +549,6 @@
     </script>
 </body>
 </html>
+
 
 
