--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             // Drawing constants for Canvas
             const timeHeaderWidth = 80;
             const dayHeaderHeight = 40;
+            const eng_maths=['Maths','English']
             const timeSlots = [
                 '9:00 - 10:00', '10:00 - 11:00', '11:00 - 12:00', '12:00 - 13:00', '13:00 - 14:00', '14:00 - 15:00', '15:00 - 16:00', '16:00 - 17:00'
             ];
@@ -556,6 +557,7 @@
     </script>
 </body>
 </html>
+
 
 
 
